deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echolog
  namespace: echolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echolog
  template:
    metadata:
      labels:
        app: echolog
    spec:
      containers:
        - name: echolog
          image: cr.jdbnet.co.uk/public/echolog:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: "echolog"
---
apiVersion: v1
kind: Service
metadata:
  name: echolog-ingress-service
  namespace: echolog
spec:
  selector:
    app: echolog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echolog-ingress
  namespace: echolog
spec:
  rules:
  - host: echolog.jdb143.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echolog-ingress-service
            port:
              number: 80
